# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
configuration/: base.yaml  local.yaml
migrations/: 20220720013553_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
